--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,9 @@
 {
   "AutoAcceptQueue": true,
   "RGAPIKEY": "",
+  "ConnectionStrings": {
+    "Sql": "Data Source=League.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
